<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>rll_analytical_kinematics</name>
  <version>0.0.0</version>
  <description>The rll_analytical_kinematics package</description>

  <maintainer email="updim@student.kit.edu">updim</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <!-- The export tag contains other, unspecified, tags....uncomment later -->
<!--   <export>
    Other tools can request additional information be placed here
    <moveit_core plugin="${prefix}/iiwa7_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export> -->
  
  
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  
  
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <moveit_core plugin="${prefix}/moveit_plugin.xml"/>
  </export>
  
  
  
  
</package>
