<?xml version="1.0"?>
<package>
  <name>rll_control</name>
  <version>0.1.0</version>
  <description>A package containing controllers used by MoveIt! and Gazebo</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>

</package>
