<?xml version="1.0"?>
<package>
  <name>rll_control</name>
  <version>0.1.0</version>
  <description>Controller configs used by MoveIt! and Gazebo</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
