<?xml version="1.0"?>
<package format="2">
  <name>rll_core</name>
  <version>0.0.1</version>
  <description>Core package containing configurations that are needed by all packages for the KUKA Robot Learning Lab at KIT</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
