<?xml version="1.0"?>
<package format="2">
  <name>rll_gazebo</name>
  <version>0.1.0</version>
  <description>Configurations for simulating a Robot Learning Lab work cell in Gazebo</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rll_control</exec_depend>
  <exec_depend>rll_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
