<?xml version="1.0"?>
<package format="3">
  <name>rll_move_client</name>
  <version>0.0.1</version>
  <description>The Robot Learning Lab MoveClient to interface with the Robot Learning Lab Movement Interface</description>

  <maintainer email="uieai@student.kit.edu">Mark Weinreuter</maintainer>
  <author email="uieai@student.kit.edu">Mark Weinreuter</author>

  <license>GPLv3+</license>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rll_move</build_depend>
  <build_depend>rll_msgs</build_depend>
  <build_export_depend>rll_move</build_export_depend>
  <build_export_depend>rll_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>rostest</build_depend>
  <exec_depend>rll_move</exec_depend>
  <exec_depend>rll_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend condition="$ROS_DISTRO == melodic">python-typing</exec_depend>
  <exec_depend>python-pip</exec_depend>
  <exec_depend>python-readchar-pip</exec_depend>

</package>
