<?xml version="1.0"?>
<package format="2">

  <name>rll_moveit_config</name>
  <version>0.3.0</version>
  <description>
    Configuration and launch files for using the Robot Learning Lab setup with the MoveIt! Motion Planning Framework
  </description>
  <author email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</author>
  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rll_description</exec_depend>
  <exec_depend>rll_description</exec_depend>
  <exec_depend>rll_gazebo</exec_depend>
  <exec_depend>rll_control</exec_depend>
  <exec_depend>rll_kinematics</exec_depend>

</package>
