<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>rll_moveit_kinematics_plugin</name>
  <version>0.0.1</version>
  <description>Inverse Kinematics plugin for Moveit using the Robot Learning Lab Kinematics library</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <author email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</author>
  <author email="updim@student.kit.edu">Philipp Altoe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <depend>rll_kinematics</depend>

  <export>
    <moveit_core plugin="${prefix}/moveit_plugin.xml"/>
  </export>

</package>
